--- a/.streamlit/style.css
+++ b/.streamlit/style.css
@@ -1,7 +1,7 @@
 /* === Background dengan Overlay === */
 .stApp {
     background: linear-gradient(rgba(0,0,0,0.25), rgba(0,0,0,0.25)),
-                url("samsat.jpg") no-repeat center center fixed;
+                url("BACKGROUND_IMAGE") no-repeat center center fixed;
     background-size: cover;
     font-family: 'Poppins', sans-serif;
     color: #f8f9fa; /* default text */
@@ -77,4 +77,3 @@ p {
     color: white;
     border-radius: 10px;
 }
-
