--- a/.streamlit/style.css
+++ b/.streamlit/style.css
@@ -1,6 +1,6 @@
 /* style.css */
 .stApp {
-    background: url("assets/samsat.jpg") no-repeat center center fixed;
+    background: url("C:\Users\peni ilhami\Downloads\Folder Tugas Ven\Semester4_2025\MAGANG 2025\samsat.jpg") no-repeat center center fixed;
     background-size: cover;
     position: relative;
 }
