--- a/.streamlit/style.css
+++ b/.streamlit/style.css
@@ -1,5 +1,6 @@
-/* file: streamlit/style.css */
 .stApp {
-    background: url("../assets/samsat.jpg") no-repeat center center fixed;
+    background: linear-gradient(rgba(0,0,0,0.6), rgba(0,0,0,0.6)),
+                url("assets/samsat.jpg") no-repeat center center fixed;
     background-size: cover;
+    color: white;
 }
